--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -24,8 +24,8 @@
    "metadata": {},
    "source": [
     "# Methodology\n",
-    "  (This is an example, not sure how we want to do all of this)\n",
-    "\tViT model: Since the dataset was already split into training and testing categories, I used these distinctions to train the model as well. While I originally used a binary cross-entropy loss function for drawing distinctions purely between possible malignant and benign tumors, I eventually transitioned to a cross-entropy loss function to attempt to identify all 8 different tumor types. Training the models required adding transformations to the training image set to reduce overfitting.\n"
+    "(This is an example, not sure how we want to do all of this)\n",
+    "ViT model: Since the dataset was already split into training and testing categories, I used these distinctions to train the model as well. While I originally used a binary cross-entropy loss function for drawing distinctions purely between possible malignant and benign tumors, I eventually transitioned to a cross-entropy loss function to attempt to identify all 8 different tumor types. Training the models required adding transformations to the training image set to reduce overfitting.\n"
    ]
   },
   {
