added vit notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,95 +19,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c06c0f69",
-   "metadata": {},
-   "source": [
-    "# Methodology\n",
-    "(This is an example, not sure how we want to do all of this)\n",
-    "ViT model: Since the dataset was already split into training and testing categories, I used these distinctions to train the model as well. While I originally used a binary cross-entropy loss function for drawing distinctions purely between possible malignant and benign tumors, I eventually transitioned to a cross-entropy loss function to attempt to identify all 8 different tumor types. Training the models required adding transformations to the training image set to reduce overfitting.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9da6ecb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from PIL import Image\n",
-    "import time\n",
-    "\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch.optim import AdamW\n",
-    "from torch.utils.data import DataLoader, Dataset\n",
-    "import torchvision.transforms as T\n",
-    "import torch.backends.cudnn as cudnn\n",
-    "from torch.optim.lr_scheduler import OneCycleLR\n",
-    "\n",
-    "# data visualization (TODO: decide how to visual the data)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "347e9bf6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example dataset loading (unsure if this is the same for all of us)\n",
-    "\n",
-    "class BreakHisDataset(Dataset):\n",
-    "  def __init__(self, csv_file, root_dir, train=True, transform=None):\n",
-    "    \n",
-    "    self.data_frame = pd.read_csv(csv_file)\n",
-    "    self.root_dir = root_dir\n",
-    "    self.transform = transform\n",
-    "\n",
-    "    if train:\n",
-    "      self.data_frame = self.data_frame[self.data_frame['grp'].str.lower() == \"train\"]\n",
-    "    else:\n",
-    "      self.data_frame = self.data_frame[self.data_frame['grp'].str.lower() == \"test\"]\n",
-    "    \n",
-    "    self.data_frame.reset_index(drop=True, inplace=True)\n",
-    "\n",
-    "  def __len__(self):\n",
-    "    return len(self.data_frame)\n",
-    "\n",
-    "  def __getitem__(self, idx):\n",
-    "    row = self.data_frame.iloc[idx]\n",
-    "    filename = row['filename']\n",
-    "    \n",
-    "    img_path = os.path.join(self.root_dir, filename)\n",
-    "    image = Image.open(img_path).convert('RGB')\n",
-    "  \n",
-    "    lower_filename = filename.lower()\n",
-    "    if \"adenosis\" in lower_filename:\n",
-    "      label = 0\n",
-    "    elif \"fibroadenoma\" in lower_filename:\n",
-    "      label = 1\n",
-    "    elif \"phyllodes_tumor\" in lower_filename:\n",
-    "      label = 2\n",
-    "    elif \"tubular_adenoma\" in lower_filename:\n",
-    "      label = 3\n",
-    "    elif \"ductal_carcinoma\" in lower_filename:\n",
-    "      label = 4\n",
-    "    elif \"lobular_carcinoma\" in lower_filename:\n",
-    "      label = 5\n",
-    "    elif \"mucinous_carcinoma\" in lower_filename:\n",
-    "      label = 6\n",
-    "    elif \"papillary_carcinoma\" in lower_filename:\n",
-    "      label = 7\n",
-    "    else:\n",
-    "      raise ValueError(f\"Cannot determine label from filename: {filename}\")\n",
-    "\n",
-    "    if self.transform:\n",
-    "      image = self.transform(image)\n",
-    "    return image, label"
+    "# Data Cleaning\n",
+    "# Data should already be cleaned, will elaborate later after I get confirmation from everyone's code"
    ]
   }
  ],
