--- a/unet_model_implementation.ipynb
+++ b/unet_model_implementation.ipynb
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6cd8c23e-69df-4090-93a7-f355652037a1",
    "metadata": {},
    "outputs": [],
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "ddd8f9ae-b4d2-4a78-a74d-c109d413f173",
    "metadata": {},
    "outputs": [
@@ -988,12 +988,13 @@
     }
    ],
    "source": [
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "# create multiclass confusion matrix\n",
     "cm = confusion_matrix(test_actual, test_predicted)\n",
     "\n",
     "fig = ConfusionMatrixDisplay(confusion_matrix=cm) \n",
     "fig.plot(cmap=plt.cm.Blues)\n",
-    "plt.title(\"Confusion Matrix\")\n",
+    "plt.title(\"Multiclass Confusion Matrix\")\n",
     "plt.show()"
    ]
   },
@@ -1078,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "9b074c88-accf-4ac5-b41b-30f6bc786154",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1102,7 @@
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=true_labels) \n",
     "\n",
     "disp.plot(cmap=plt.cm.Blues)\n",
-    "plt.title(\"Confusion Matrix\")\n",
+    "plt.title(\"Binary Confusion Matrix\")\n",
     "plt.show()"
    ]
   },
